force-app/main/default/objects/ProductReview__c/ProductReview__c.object-meta.xml
<CustomObject>
    <label>Product Review</label>
    <pluralLabel>Product Reviews</pluralLabel>
    <nameField>
        <label>Review Number</label>
        <type>AutoNumber</type>
        <displayFormat>REV-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>