force-app/main/default/objects/ProductReview__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Review Body</label>
    <type>LongTextArea</type>
    <length>32768</length>

</CustomField>