force-app/main/default/objects/ProductReview__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Reviews</relationshipLabel>
    <relationshipName>ProductReviews</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>