force-app/main/default/objects/ProductReview__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Reviews</relationshipLabel>
    <relationshipName>ProductReviews</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>