force-app/main/default/objects/ProductReview__c/fields/VerifiedPurchase__c.field-meta.xml
<CustomField>
    <fullName>VerifiedPurchase__c</fullName>
    <label>Verified Purchase</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>